Moved Edit Button, Fixed Readonly Class Spacing

--- a/ProjectPendragon/src/app/components/characters/view-character/view-character.component.css
+++ b/ProjectPendragon/src/app/components/characters/view-character/view-character.component.css
@@ -1,3 +1,9 @@
 .edit-button {
     float: right;
+    max-height: 40px;
+    max-width: 60px;
+}
+
+.header-row {
+    align-items: center;
 }
